--- a/apps/client-react/index.html
+++ b/apps/client-react/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OAuth Entra ID</title>
-    <meta name="description" content="The Secure Way To Authenticate Your Users" />
+    <meta name="description" content="Simple and Secure OAuth 2.0 for Microsoft Entra ID" />
     
     <meta property="og:title" content="OAuth Entra ID" />
-    <meta property="og:description" content="The Secure Way To Authenticate Your Users"/>
+    <meta property="og:description" content="Simple and Secure OAuth 2.0 for Microsoft Entra ID"/>
     <meta property="og:image" content="/icon.png" />
     <meta property="og:type" content="website" />
   </head>
