Cleaning and adding icons

--- a/frontends/react/index.html
+++ b/frontends/react/index.html
@@ -7,11 +7,19 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-tsrouter-app"
+      content="Simple and Secure OAuth 2.0 for Microsoft Entra ID"
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Create TanStack App - react</title>
+    <title>OAuth Entra ID</title>
+
+    <meta property="og:title" content="OAuth Entra ID" />
+    <meta
+      property="og:description"
+      content="Simple and Secure OAuth 2.0 for Microsoft Entra ID"
+    />
+    <meta property="og:image" content="/logo192.png" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="app"></div>
